--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,4 @@
-$font-primary: 'Open Sans', Arial, sans-serif;
+padding: 0em 0;$font-primary: 'Open Sans', Arial, sans-serif;
 
 
 // Overrides
@@ -572,7 +572,7 @@ h1, h2, h3, h4, h5, h6, figure {
 #gtco-practice-areas,
 #gtco-our-team,
 #gtco-contact {
-	padding: 7em 0;
+	padding: oem 0;
 	clear: both;
 }
 
